# local-ai-agent

./: .gitignore  CHANGELOG.md  COMPLETION_REPORT.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  PHASE2_COMPLETE.md  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: __init__.py  confirmation.py  executor.py  orchestrator.py  planner.py  retry_strategies.py
agents/workflows/: __init__.py  debug_and_fix.py  research_and_implement.py  test_and_commit.py
config/: models.yaml
core/: __init__.py
core/config/: __init__.py  editions.py  settings.py
core/llm/: __init__.py  ollama.py  prompts.py  router.py
core/mcp/: __init__.py  client.py  hardened.py  http_server.py  main.py  metrics.py  protocol.py  rate_limit.py  registry.py  security.py  server.py  transport.py  types.py  validation.py
core/memory/: __init__.py  embeddings.py  ingest.py  mock_data.py  rag.py  silos.py  vector_store.py
docs/: ARCHITECTURE.md  PHASE2_STATUS.md  SETUP.md
domains/: __init__.py
domains/base/: __init__.py
domains/base/browser/: __init__.py  server.py
domains/base/chat/: __init__.py  server.py
domains/base/filesystem/: __init__.py  server.py  tools.py
domains/blender/: __init__.py
domains/coding/: __init__.py  server.py
domains/daw/: __init__.py
domains/study/: __init__.py  server.py
enterprise/: __init__.py
enterprise/analytics/: __init__.py
enterprise/cloud/: __init__.py
enterprise/teams/: __init__.py
examples/: chat_export.json  mock_chat_export.json
examples/custom_domain/: README.md
examples/workflows/: README.md
installer/: README.md  build.ps1  create_shortcut.ps1  gene.spec  gene_setup.iss  placeholder.txt
interfaces/: __init__.py
interfaces/cli/: main.py
interfaces/desktop/: __init__.py  app.py
interfaces/gui/: __init__.py  app.py
interfaces/web/: README.md  __init__.py
scripts/: benchmark.py  benchmark_phase2.py  export_chat_history.py  install_models.py  setup.py  test_ollama.py
tests/: conftest.py  qa_test_questions.py  test_memory_pipeline.py
tests/integration/: test_mcp.py  test_workflows.py
tests/unit/: test_agent_confirmation.py  test_agent_executor.py  test_filesystem.py  test_hardening.py  test_ollama.py  test_retry_strategies.py  test_terminal.py
(+14 files in other folders)
